--- a/card-example.html
+++ b/card-example.html
@@ -18,35 +18,8 @@
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.1/dist/js/uikit-icons.min.js"></script>
 
 
-<meta property="og:title" content="Borg Creative Studios">
-<meta property="og:description" content="Share your contact information with ease!">
-<meta property="og:image" content="https://www.borgcreative.com/img/bcs-card.jpg">
-<meta property="og:url" content="https://www.borgcreative.com/bcs-card.html">
-
-<meta property="twitter:title" content="Borg Creative Studios">
-<meta property="twitter:description" content="Share your contact information with ease!">
-<meta property="twitter:image" content="https://www.borgcreative.com/img/bcs-card.jpg">
-
-<meta property="twitter:url" content="https://www.borgcreative.com/bcs-card.html">
-<meta name="description" content="Share your contact information with ease!">
-<meta name="keywords" content="marketing, privacy, privacy oriented, digital marketing, marketing platform">
-<meta name="robots" content="index, follow">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="language" content="English">
-<meta name="revisit-after" content="30 days">
-
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org/",
-  "@type": "Software App",
-  "name": "BCS Card",
-  "image": "https://www.borgcreative.com/img/bcs.png",
-  "description": "Share your contact information with ease!",
-  "brand": "Borg Creative Studios"
-}
-</script>
-
-    <title>BCS Card</title>
+    <meta charset="utf-8">
+    <title>BCS Card example</title>
   </head>
 
 <header>
@@ -94,72 +67,20 @@
   }
   function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
 </script>
-    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('img/bcs-cover.jpg');">
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('img/code.jpg');">
 
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
-          <img src="./img/bcs.png" width="40%" alt="">
-          <h1><strong>BCS Card</strong></h1>
-          <p><a class="uk-button uk-button-secondary" href="https://airtable.com/shrkpDCl7O60tSOxz" target="_blank">Get started</a><a class="uk-button uk-button-secondary" href="./accounts.html">Accounts</a></p>
+          <img src="./img/bcs-logo.PNG" width="40%" alt="">
+          <h1><strong>BCS Card examples</strong></h1>
+<p> <img src="./img/bcsstatic.png" width="120mm"> </p>
+<p>Static Card</p>
+<p> <img src="./img/bcsdynamic.png" width="120mm"> </p>
+<p>Dynamic Card</p>
 
         </div>
 
     </div>
     <a id = "next1"></a>
-
-
-    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #849ea3;">
-      <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
-
-        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
-          <center width="95%">
-            <img width="65%" src="./img/share.png" alt="Sharing illustration | Sourced from undraw.co">
-            <h2> <strong>What is a BCS Card?</strong> </h2>
-            <p>BCS Cards are shareable business cards that can be shared via QR code or link.*</p>
-            <p>*Dependent on type of card purchased</p>
-          </center>
-
-
-
-        </div>
-    </div>
-
-  <a id = "next2"></a>
-    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #3d566e;">
-      <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
-
-
-          <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
-            <center width="95%">
-              <img width="65%" src="./img/connect.png" alt="People sharing digital content illustration | Sourced from undraw.co">
-              <h2> <strong>Who can share my BCS Card?</strong> </h2>
-              <p>Anyone with the QR code or link can share your card!*</p>
-              <p>*Dependent on type of card purchased</p>
-            </center>
-        <!-- <a class="uk-button uk-button-text" href="#next3" uk-scroll>Next</a> -->
-
-        </div>
-    </div>
-    <a id = "next3"></a>
-
-    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #849ea3;">
-      <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
-
-
-          <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
-            <center width="95%">
-              <img width="65%" src="./img/data.png" alt="Data with person illustration | Sourced from undraw.co">
-              <h2> <strong>What about privacy?</strong> </h2>
-              <p>BCS Cards collect minimal view data and never collect IP addresses. The data collected is never sold.</p>
-            </center>
-            <p> <a class="uk-button uk-button-text" href="./card-example.html">View examples</a></p>
-        <p><a class="uk-button uk-button-text" href="https://airtable.com/shrkpDCl7O60tSOxz" target="_blank">Let's get started!</a></p>
-
-        </div>
-    </div>
-
-
-
-
 
   </body>
 
