--- a/card/bcs1.html
+++ b/card/bcs1.html
@@ -88,6 +88,8 @@
       <p>Borg Creative Studios is the place to find innovative entertainment and privacy-oriented business resources.</p>
       <!--<p style="color:black" class="uk-text-meta">Email: Tifany.George@kw.com</p>-->
       <p><a style="color:black" href="https://www.borgcreative.com">Website</a></p>
+      <p><a style="color:black" href="https://www.borgcreative.com/card/vcard/bcs.vcf" target="_blank">Download Contact</a></p>
+
     <!--  <p><a style="color:black" href="https://www.borgcreative.com/card/vcard/" target="_blank">Download Contact</a></p>-->
       </div>
     <div class="uk-card-footer">
