Refined the view options

--- a/privacy.html
+++ b/privacy.html
@@ -62,33 +62,10 @@
   <h1><strong>Privacy Policy for Borg Creative Studios, LLC</strong></h1>
   <h2>Effective Date: March 28, 2021</h2>
   <p class="uk-text-meta">For prior version click <a href="./privacyold.html">here</a>.</p>
-
+  <p><div uk-lightbox>
+    <a class="uk-button uk-button-default" href="./privacychange.html">View changes</a>
+</div></p>
   <div>
-    <h2>Updates made to this privacy policy:</h2>
-    <blockquote>
-      <h3>Third Party Privacy Policies</h3>
-      <blockquote>
-      <h4>What changed about this section of the privacy policy?</h4>
-      <p>This section now has an updated third-party service list.</p>
-
-    </blockquote></blockquote>
-    <blockquote>
-      <h3>Advertising Partners Privacy Policies</h3>
-      <blockquote>
-        <h4>What changed about this section of the privacy policy?</h4>
-        <h4>This section previously stated:</h4>
-        <i><p>"You may consult this list to find the Privacy Policy for each of the advertising partners of Borg Creative Studios.</p>
-
-        <p>Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on Borg Creative Studios, which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.</p>
-
-        <p>Note that Borg Creative Studios has no access to or control over these cookies that are used by third-party advertisers."</p>
-      </i>
-      <h4>This section now reads:</h4>
-      <i><p>"We do not utilize third party advertising services on our websites."</p></i>
-    </blockquote>
-    </blockquote>
-
-  </div>
 
 
 <p>At Borg Creative Studios, accessible from https://www.borgcreative.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Borg Creative Studios and how we use it.</p>
@@ -128,10 +105,14 @@
 
 
 
-<h2><span class="uk-label uk-label-success">UPDATED</span> Advertising Partners Privacy Policies</h2>
+<h2><div uk-lightbox>
+  <a href="./privacychange.html"><span class="uk-label uk-label-success">UPDATED</span> Advertising Partners Privacy Policies</a>
+</div></h2>
 <p>We do not utilize third party advertising services on our websites.</p>
 
-<h2><span class="uk-label uk-label-success">UPDATED</span> Third Party Privacy Policies</h2>
+<h2><div uk-lightbox>
+  <a href="./privacychange.html"><span class="uk-label uk-label-success">UPDATED</span> Third Party Privacy Policies</a>
+</div></h2>
 <ul>
   <li> <a href="https://airtable.com/privacy" target="_blank">Airtable</a></li>
   <li> <a href="https://panelbear.com/privacy/" target="_blank">Panel Bear</a></li>
