--- a/bcs-card.html
+++ b/bcs-card.html
@@ -114,7 +114,17 @@
           <center width="95%">
             <img width="65%" src="./img/share.png" alt="Sharing illustration | Sourced from undraw.co">
             <h2> <strong>What is a BCS Card?</strong> </h2>
-            <p>BCS Cards are shareable business cards that can be shared via QR code or link.*</p>
+            <p>
+            <ul uk-accordion>
+            <li>
+            <a class="uk-accordion-title uk-text-small" href="#">BCS Cards are shareable business cards that can be shared via QR code or link.*</a>
+            <div class="uk-accordion-content">
+            <img src="./img/bcs-card-promo3.png">
+            </div>
+            </li>
+            </ul>
+            </p>
+
             <p>*Dependent on type of card purchased</p>
           </center>
 
@@ -132,7 +142,16 @@
             <center width="95%">
               <img width="65%" src="./img/connect.png" alt="People sharing digital content illustration | Sourced from undraw.co">
               <h2> <strong>Who can share my BCS Card?</strong> </h2>
-              <p>Anyone with the QR code or link can share your card!*</p>
+              <p>
+              <ul uk-accordion>
+              <li>
+              <a class="uk-accordion-title uk-text-small" href="#">Anyone with the QR code or link can share your card!*</a>
+              <div class="uk-accordion-content">
+              <img src="./img/bcs-card-promo1.png">
+              </div>
+              </li>
+              </ul>
+              </p>
               <p>*Dependent on type of card purchased</p>
             </center>
         <!-- <a class="uk-button uk-button-text" href="#next3" uk-scroll>Next</a> -->
