Updates to stats

--- a/bcs-card.html
+++ b/bcs-card.html
@@ -125,7 +125,7 @@
             </ul>
             </p>
 
-            <p>*Dependent on type of card purchased</p>
+            <p>*Dependent on type of e-card/QR purchased</p>
           </center>
 
 
@@ -152,7 +152,7 @@
               </li>
               </ul>
               </p>
-              <p>*Dependent on type of card purchased</p>
+              <p>*Dependent on type of e-card/QR purchased</p>
             </center>
         <!-- <a class="uk-button uk-button-text" href="#next3" uk-scroll>Next</a> -->
 
