--- a/chartm.html
+++ b/chartm.html
@@ -15,7 +15,8 @@
 
 
         ['Estimated views (FEB, 2021)',       12, 883, 38, 0, 7, 488,8, 12,6],
-        ['Estimated views (MAR, 2021)',       256, 878, 44, 0, 9, 595,20, 5,6]
+        ['Estimated views (MAR, 2021)',       256, 878, 44, 0, 9, 595,20, 5,6],
+        ['Estimated views (APR, 2021)',       526, 178, 2, 0, 1, 100,0, 0,2]
 
       ]);
 
