--- a/chartt.html
+++ b/chartt.html
@@ -14,7 +14,8 @@
         ['Estimated views (DEC, 2020)',        2432],
         ['Estimated views (JAN, 2021)',       3391],
         ['Estimated views (FEB, 2021)',       1444],
-        ['Estimated views (MAR, 2021)',       1839]
+        ['Estimated views (MAR, 2021)',       1839],
+        ['Estimated views (APR, 2021)',       797]
       ]);
 
       var options = {
