--- a/chartm.html
+++ b/chartm.html
@@ -17,23 +17,23 @@ const data = {
         },
         {
             name: "JBP", type: "line",
-            values: [872,883,878,373]
+            values: [872,883,878,587]
         },
         {
             name: "GTT", type: "line",
-            values: [57,38,44,11]
+            values: [57,38,44,17]
         },
         {
             name: "Render Blog", type: "line",
-            values: [25,7,9,1]
+            values: [25,7,9,3]
         },
         {
             name: "CWJ", type: "line",
-            values: [861,488,595,193]
+            values: [861,488,595,300]
         },
         {
             name: "Author", type: "line",
-            values: [0,8,20,1]
+            values: [0,8,20,2]
         },
         {
             name: "Marketing Pages", type: "line",
@@ -41,7 +41,7 @@ const data = {
         },
         {
             name: "Fruity", type: "line",
-            values: [46,6,6,3]
+            values: [46,6,6,4]
         }
     ]
 }
@@ -95,6 +95,6 @@ const chart = new frappe.Chart("#chart", {  // or a DOM element,
   </script>-->
 </head>
 <body>
-  <center><div id="curve_chart" style="width: 100%; height: 300px"></div></center>
+  <!--<center><div id="curve_chart" style="width: 100%; height: 300px"></div></center>-->
 </body>
 </html>
