--- a/chartt.html
+++ b/chartt.html
@@ -13,7 +13,7 @@ const data = {
     datasets: [
         {
             name: "Views", type: "Line",
-            values: [3391,1444,1839,1099]
+            values: [3391,1444,1839,1431]
         }
     ]
 }
@@ -58,6 +58,6 @@ const chart = new frappe.Chart("#chart", {  // or a DOM element,
   </script>-->
 </head>
 <body>
-  <center><div id="curve_chart" style="width: 100%; height: 300px"></div></center>
+  <!--<center><div id="curve_chart" style="width: 100%; height: 300px"></div></center>-->
 </body>
 </html>
