--- a/privacy.html
+++ b/privacy.html
@@ -117,6 +117,7 @@
   <li> <a href="https://airtable.com/privacy" target="_blank">Airtable</a></li>
   <li> <a href="https://panelbear.com/privacy/" target="_blank">Panel Bear</a></li>
   <li> <a href="https://www.freshworks.com/privacy/" target="_blank">Freshworks (Fresh Chat, Fresh Desk)</a></li>
+  <li> <a href="https://docs.github.com/en/github/site-policy/github-privacy-statement" target="_blank">GitHub (GitHub Pages, git)</a></li>
 
 </ul>
 <p>Borg Creative Studios's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party services for more detailed information. It may include their practices and instructions about how to opt-out of certain options. </p>
