New forms, removed Airtable, updated privacy policy, and added privacy change alert

--- a/bcs-card.html
+++ b/bcs-card.html
@@ -99,7 +99,7 @@
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
           <img src="./img/bcs.png" width="40%" alt="">
           <h1><strong>BCS Card</strong></h1>
-          <p><a class="uk-button uk-button-secondary" href="https://airtable.com/shrkpDCl7O60tSOxz" target="_blank">Get started</a><a class="uk-button uk-button-secondary" href="./accounts.html">Accounts</a></p>
+          <p><a class="uk-button uk-button-secondary" href="https://borgcreative.agilecrm.com/forms/5934035918979072" target="_blank">Get started</a><a class="uk-button uk-button-secondary" href="./accounts.html">Accounts</a></p>
 
         </div>
 
