--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
 
 
   <body>
+
+
+
     <script>
   function initFreshChat() {
     window.fcWidget.init({
@@ -105,10 +108,15 @@
     <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('img/bcs-cover.jpg');">
 
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+
           <img src="./img/bcs.png" width="40%" alt="">
           <h1><strong>Borg Creative Studios</strong></h1>
           <h2><strong>The future of media.</strong></h2>
 
+          <div class="uk-alert-primary" uk-alert>
+              <a class="uk-alert-close" uk-close></a>
+              <p>We have updated our privacy policy to be easier to read and reflect a change in our third-party service providers. <a href="./privacy.html">View Privacy Policy</a> </p>
+          </div>
 
 
         </div>
