--- a/privacy.html
+++ b/privacy.html
@@ -60,7 +60,7 @@
 <div style="margin: 10px;">
 
   <h1><strong>Privacy Policy for Borg Creative Studios, LLC</strong></h1>
-  <h2>Effective Date: March 28, 2021</h2>
+  <h2>Effective Date: April 22, 2021</h2>
   <p class="uk-text-meta">For prior version click <a href="./privacyold.html">here</a>.</p>
   <p><div uk-lightbox>
     <a class="uk-button uk-button-default" href="./privacychange.html">View changes</a>
@@ -105,19 +105,25 @@
 
 
 
-<h2><div uk-lightbox>
-  <a href="./privacychange.html"><span class="uk-label uk-label-success">UPDATED</span> Advertising Partners Privacy Policies</a>
-</div></h2>
+<h2>
+Advertising Partners Privacy Policies
+</h2>
 <p>We do not utilize third party advertising services on our websites.</p>
 
 <h2><div uk-lightbox>
   <a href="./privacychange.html"><span class="uk-label uk-label-success">UPDATED</span> Third Party Privacy Policies</a>
 </div></h2>
 <ul>
-  <li> <a href="https://airtable.com/privacy" target="_blank">Airtable</a></li>
   <li> <a href="https://panelbear.com/privacy/" target="_blank">Panel Bear</a></li>
-  <li> <a href="https://www.freshworks.com/privacy/" target="_blank">Freshworks (Fresh Chat, Fresh Desk)</a></li>
+  <p>Privacy friendly web analytics</p>
+  <li> <a href="https://www.agilecrm.com/privacy-policy" target="_blank">Agile CRM</a></li>
+  <p>CRM and form management (Any information shared in forms is stored with Agile CRM)</p>
   <li> <a href="https://docs.github.com/en/github/site-policy/github-privacy-statement" target="_blank">GitHub (GitHub Pages, git)</a></li>
+  <p>Web and project hosting (no personal information)</p>
+  <li> <a href="https://www.freshworks.com/privacy/" target="_blank">Freshworks (Fresh Desk, Fresh Chat)</a></li>
+  <p>Helpdesk, knowledge base, and web chat. Any information shared in helpdesk or chat communication is stored with FreshWorks.</p>
+
+
 
 </ul>
 <p>Borg Creative Studios's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party services for more detailed information. It may include their practices and instructions about how to opt-out of certain options. </p>
@@ -148,6 +154,11 @@
 <p>Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.</p>
 
 <p>Borg Creative Studios does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.</p></div>
+
+<div uk-lightbox>
+  <h2><a href="./privacychange.html"><span class="uk-label uk-label-success">UPDATED</span> Data Deletion</h2></a></div>
+<p>Upon request, we will delete any and all known data associated with you. Data that is collected anonymously will not be deleted.</p>
+<p>Email data@mail.borgcreative.com to request your data to be deleted or complete <a href="https://borgcreative.agilecrm.com/forms/4972927422889984" target="_blank">this form</a></p>
     <a id = "next1"></a>
 
 </div>
