--- a/welcome.html
+++ b/welcome.html
@@ -112,7 +112,7 @@
               }
                 function qsub1() {
                   var x = document.getElementById("q1");
-                  document.getElementById("q1").innerHTML = '<a href="./animation.html"><button class="uk-button uk-button-secondary">Animation</button></a><a href="./interactive.html"><button class="uk-button uk-button-secondary">Interactive</button></a><a href="./video.html"><button class="uk-button uk-button-secondary">Video</button></a><a href="https://airtable.com/shrPGoAka7WYAyNDj" target="_blank"><button class="uk-button uk-button-secondary">Request consultation</button></a>';
+                  document.getElementById("q1").innerHTML = '<a href="./animation.html"><button class="uk-button uk-button-secondary">Animation</button></a><a href="./interactive.html"><button class="uk-button uk-button-secondary">Interactive</button></a><a href="./video.html"><button class="uk-button uk-button-secondary">Video</button></a><a href="https://borgcreative.agilecrm.com/forms/5350484106346496" target="_blank"><button class="uk-button uk-button-secondary">Request consultation</button></a>';
                   var x = document.getElementById("t1");
                   document.getElementById("t1").innerHTML = "Select a category or request a consultation.";
                   var x = document.getElementById("reset");
@@ -136,7 +136,7 @@
                 }
                 function qsub4() {
                   var x = document.getElementById("q1");
-                  document.getElementById("q1").innerHTML = '<a href="./bcs-card.html"><button class="uk-button uk-button-secondary" >Digital Business Cards</button></a><a href="./page12.html"><button class="uk-button uk-button-secondary" >Web Marketing</button></a><a href="https://search.borgcreative.com" target="_blank"><button class="uk-button uk-button-secondary" >BCS Search</button></a><a href="https://airtable.com/shrXaOPQ4UHah6w9d" target="_blank"><button class="uk-button uk-button-secondary" >BCS Search Indexing</button></a>';
+                  document.getElementById("q1").innerHTML = '<a href="./bcs-card.html"><button class="uk-button uk-button-secondary" >Digital Business Cards</button></a><a href="./page12.html"><button class="uk-button uk-button-secondary" >Web Marketing</button></a><a href="https://search.borgcreative.com" target="_blank"><button class="uk-button uk-button-secondary" >BCS Search</button></a>';
                   var x = document.getElementById("t1");
                   document.getElementById("t1").innerHTML = "Okay, let's look at our web services.";
                   var x = document.getElementById("reset");
