--- a/page12.html
+++ b/page12.html
@@ -99,7 +99,7 @@
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
           <img src="./img/bcs.png" width="40%" alt="">
           <h1><strong>BCS Marketing</strong></h1>
-          <p><a class="uk-button uk-button-secondary" href="https://airtable.com/shr9X8mVZzORWDKSu" target="_blank">Buy an ad</a><a class="uk-button uk-button-secondary" href="./accounts.html">Accounts</a></p>
+          <p><a class="uk-button uk-button-secondary" href="https://borgcreative.agilecrm.com/forms/5144355338256384" target="_blank">Buy an ad</a><a class="uk-button uk-button-secondary" href="./accounts.html">Accounts</a></p>
           <p><a href="https://www.producthunt.com/posts/borg-creative-studios-marketing?utm_source=badge-review&utm_medium=badge&utm_souce=badge-borg-creative-studios-marketing#discussion-body" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/review.svg?post_id=269183&theme=dark" alt="Borg Creative Studios Marketing - Privacy-Oriented, Low-Cost, Target Topics | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a></p>
 
         </div>
