--- a/thankyou.html
+++ b/thankyou.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<head>
-  <link rel="shortcut icon" href="./img/bcs-logo.PNG">
+  <head>
+    <link rel="shortcut icon" href="./img/bcs-logo.PNG">
 
-  <!-- Compressed CSS -->
+    <!-- Compressed CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
 
 <!-- Compressed JavaScript -->
@@ -18,11 +18,22 @@
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.1/dist/js/uikit-icons.min.js"></script>
 
 
-  <meta charset="utf-8">
-  <title>Policy Changes</title>
-</head>
+    <meta charset="utf-8">
+    <meta property="og:title" content="Borg Creative Studios">
+    <meta property="og:description" content="Borg Creative Studios | Welcome">
+    <meta property="og:image" content="https://www.borgcreative.com/img/bcs-logo.PNG">
+    <meta property="og:url" content="https://www.borgcreative.com/welcome.html">
+
+    <meta property="twitter:title" content="Borg Creative Studios">
+    <meta property="twitter:description" content="Borg Creative Studios | Welcome">
+    <meta property="twitter:image" content="https://www.borgcreative.com/img/bcs-logo.PNG">
+    <meta property="twitter:url" content="https://www.borgcreative.com/welcome.html">
+
+    <title>Thank you!</title>
+  </head>
+
 <header>
-  <!--<div class="uk-inline" style="position: fixed; top: 0px; left: 0px;">
+  <div class="uk-inline" style="position: fixed; top: 0px; left: 0px;">
       <a href="./index.html"><button class="uk-button uk-button-secondary" type="button">Home</button></a>
 
       <button class="uk-button uk-button-secondary" type="button" >Menu</button>
@@ -50,43 +61,71 @@
 
       </div>
 
-  </div>-->
+  </div>
 
 
 </header>
 
 
-  <body style="margin-top: 50px;">
-<div style="margin: 10px;">
+  <body>
+    <script>
+  function initFreshChat() {
+    window.fcWidget.init({
+      token: "ecce6efc-4e78-428e-8df6-c1bdd0f3c1bd",
+      host: "https://wchat.freshchat.com"
+    });
+  }
+  function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
+</script>
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('img/fireworks1.jpg');">
 
-  <h1><strong>Updates made to this privacy policy:</strong></h1>
-  <h2>Effective Date: April 22, 2021</h2>
-
-
-  <div>
-    <blockquote>
-      <h3>Data Deletion</h3>
-      <blockquote>
-      <h4>What changed about this section of the privacy policy?</h4>
-      <p>We have made it easier to request your data to be deleted.</p>
-
-    </blockquote></blockquote>
-    <blockquote>
-      <h3>Third Party Privacy Policies</h3>
-      <blockquote>
-        <h4>What changed about this section of the privacy policy?</h4>
-
-        <p>We removed Airtable and added Agile CRM. We no longer utilize Airtable and all customer associated data has been deleted. No data has been shared to Agile CRM.</p>
-
-    </blockquote>
-    </blockquote>
-
-  </div>
+        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+          <h1>Thank you!</h1>
+          <h3 id="t1">We will get started on that!</h3>
+          <p id="q1">We may have to contact you for more information or payment.</p>
 
 
-</div>
 
+
+
+
+
+
+        </div>
+
+    </div>
+    <a id = "next1"></a>
 
   </body>
+
+
+  <footer>
+
+
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('img/bcs-cover.jpg');">
+
+        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+          <table class="uk-table" >
+      <tbody style="border: none;">
+          <tr style="background-color: #3d566e; border: none; color: #fff;">
+  <td><a href="./privacy.html" >Privacy</a></td>
+  <td><a href="./jobs.html" >Jobs</a></td>
+  <td><a href="./about.html" >About Us</a></td>
+
+          </tr>
+          <tr style="background-color: #3d566e; border: none; color: #fff;">
+  <td><a href="https://data.borgcreative.com/" target="_blank" >Data</a></td>
+  <td><a href="./accountterms.html" >Terms</a></td>
+  <td><a href="https://borgcreative.freshdesk.com/support/home"target="_blank">Support</a></td>
+          </tr>
+      </tbody>
+      <caption>Borg Creative Studios, LLC</caption>
+  </table>
+        </div>
+
+    </div>
+  </footer>
+
+
 
 </html>
