--- a/video.html
+++ b/video.html
@@ -96,7 +96,7 @@
 
           <h1 style="text-shadow: 2px 2px #000;"><strong>Quality</strong></h1>
           <p style="text-shadow: 2px 2px #000;">All of our content is original. Our vision is to produce high quality and family friendly content.</p>
-          <p><a class="uk-button uk-button-secondary" href="https://airtable.com/shrPGoAka7WYAyNDj" target="_blank">Schedule a consultation</a></p>
+          <p><a class="uk-button uk-button-secondary" href="https://borgcreative.agilecrm.com/forms/5350484106346496" target="_blank">Schedule a consultation</a></p>
         </div>
 
     </div>
