--- a/chartm.html
+++ b/chartm.html
@@ -8,40 +8,40 @@
 <div id="chart"></div>
 <script>
 const data = {
-    labels: ["JAN, 2021","FEB, 2021","MAR, 2021","APR, 2021"
+    labels: ["JAN, 2021","FEB, 2021","MAR, 2021","APR, 2021","MAY, 2021"
     ],
     datasets: [
         {
             name: "Social Accounts", type: "Line",
-            values: [1460,12,256,1097]
+            values: [1460,12,256,1097,550]
         },
         {
             name: "JBP", type: "line",
-            values: [872,883,878,817]
+            values: [872,883,878,817,261]
         },
         {
             name: "GTT", type: "line",
-            values: [57,38,44,41]
+            values: [57,38,44,41,7]
         },
         {
             name: "Render Blog", type: "line",
-            values: [25,7,9,5]
+            values: [25,7,9,5,0]
         },
         {
             name: "CWJ", type: "line",
-            values: [861,488,595,408]
+            values: [861,488,595,408,147]
         },
         {
             name: "Author", type: "line",
-            values: [0,8,20,4]
+            values: [0,8,20,4,7]
         },
         {
             name: "Marketing Pages", type: "line",
-            values: [0,12,5,0]
+            values: [0,12,5,0,0]
         },
         {
             name: "Fruity", type: "line",
-            values: [46,6,6,5]
+            values: [46,6,6,5,0]
         }
     ]
 }
