--- a/chartt.html
+++ b/chartt.html
@@ -8,12 +8,12 @@
 <div id="chart"></div>
 <script>
 const data = {
-    labels: ["JAN, 2021","FEB, 2021","MAR, 2021","APR, 2021"
+    labels: ["JAN, 2021","FEB, 2021","MAR, 2021","APR, 2021","MAY, 2021"
     ],
     datasets: [
         {
             name: "Views", type: "Line",
-            values: [3391,1444,1839,2377]
+            values: [3391,1444,1839,2377,965]
         }
     ]
 }
