--- a/dashboard.html
+++ b/dashboard.html
@@ -71,8 +71,13 @@
 
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
           <center widith="95%">
-            <img width="65%" src="./img/datagroups.png" alt="Video files illustration | Sourced from undraw.co">
-            <h1> <strong>Marketing Dashboard</strong> </h1>
+            <img width="85%" src="./img/construction.png" alt="Construction illustration | Sourced from undraw.co">
+            <h1>This page is under construction!</h1>
+            <h5>A new, better dashboard is coming soon!</h5>
+
+            <!--<img width="65%" src="./img/datagroups.png" alt="Video files illustration | Sourced from undraw.co">-->
+
+            <!--<h1> <strong>Marketing Dashboard</strong> </h1>-->
 
 
           </center>
@@ -87,31 +92,12 @@
 <div style="margin: 10px;">
 
   <!--<h1><strong>Marketing Dashboard</strong></h1>-->
-  <table class="uk-table" width="90%">
-      <caption>View Data</caption>
-      <thead>
-          <tr>
-              <th>Last Week</th>
-              <th>This Month</th>
-              <th>Last Month</th>
-          </tr>
-      </thead>
 
-      <tbody>
-          <tr>
-              <td>965</td>
-              <td>965</td>
-              <td>2377</td>
-          </tr>
-      </tbody>
-  </table>
-  <center><embed src="./chartb.html" width="100%" height="350px"></center>
+  <!--<center><embed src="./chartb.html" width="100%" height="350px"></center>
   <center><embed src="./chartm.html" width="100%" height="350px"></center>
 <center> <p><a class="uk-button uk-button-secondary" href="./chartm-2020.html" target="_blank">View 2020's data</a></p> </center>
 
-    <center><embed src="./chartt.html" width="100%" height="350px"></center>
-      <center> <p><a class="uk-button uk-button-secondary" href="./chartt-2020.html" target="_blank">View 2020's data</a></p> </center>
-<!--<center><p><a class="uk-button uk-button-secondary" href="https://airtable.com/shr2U9YDg30zOnthS/tblTq8exUnoJ33S1w" target="_blank">View site gallery</a></p></center>-->
+    <center><embed src="./chartt.html" width="100%" height="350px"></center>-->
 
 
   <a id = "next1"></a>
