new dash board!

--- a/dashboard.html
+++ b/dashboard.html
@@ -71,13 +71,13 @@
 
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
           <center widith="95%">
-            <img width="85%" src="./img/construction.png" alt="Construction illustration | Sourced from undraw.co">
+            <!--<img width="85%" src="./img/construction.png" alt="Construction illustration | Sourced from undraw.co">
             <h1>This page is under construction!</h1>
-            <h5>A new, better dashboard is coming soon!</h5>
+            <h5>A new, better dashboard is coming soon!</h5>-->
 
-            <!--<img width="65%" src="./img/datagroups.png" alt="Video files illustration | Sourced from undraw.co">-->
+            <img width="65%" src="./img/datagroups.png" alt="Video files illustration | Sourced from undraw.co">
 
-            <!--<h1> <strong>Marketing Dashboard</strong> </h1>-->
+            <h1> <strong>Marketing Dashboard</strong> </h1>
 
 
           </center>
@@ -91,16 +91,67 @@
 
 <div style="margin: 10px;">
 
-  <!--<h1><strong>Marketing Dashboard</strong></h1>-->
-
-  <!--<center><embed src="./chartb.html" width="100%" height="350px"></center>
-  <center><embed src="./chartm.html" width="100%" height="350px"></center>
-<center> <p><a class="uk-button uk-button-secondary" href="./chartm-2020.html" target="_blank">View 2020's data</a></p> </center>
-
-    <center><embed src="./chartt.html" width="100%" height="350px"></center>-->
 
 
-  <a id = "next1"></a>
+
+
+    <ul class="uk-subnav uk-subnav-pill" uk-switcher>
+        <li><button class="uk-button uk-button-default" type="button" href="#">Location Views</button></li>
+        <li><button class="uk-button uk-button-default" type="button" href="#">Network Views</button></li>
+        <li><button class="uk-button uk-button-default" type="button" href="#">View Type</button></li>
+        <li><button class="uk-button uk-button-default" type="button" href="#">Database</button></li>
+    </ul>
+
+    <ul class="uk-switcher uk-margin">
+        <li><center><embed src="./chartm.html" width="100%" height="350px"></center><center> <p><a class="uk-button uk-button-secondary" href="./chartm-2020.html" target="_blank">View 2020's data</a></p> </center> </li>
+        <li><center><embed src="./chartt.html" width="100%" height="350px"></center><center> <p><a class="uk-button uk-button-secondary" href="./chartt-2020.html" target="_blank">View 2020's data</a></p> </center></li>
+        <li><center><embed src="./chartb.html" width="100%" height="350px"></center></li>
+        <li><center>
+        <table class="uk-table uk-table-responsive">
+    <caption>Placement Breakdown</caption>
+    <thead>
+        <tr>
+            <th>Ad Placement</th>
+            <th># of Instances</th>
+            <th># of Views (Type A)</th>
+        </tr>
+    </thead>
+
+    <tbody>
+        <tr>
+            <td>mk2-bar-1</td>
+            <td>3</td>
+            <td>0</td>
+        </tr>
+        <tr>
+            <td>mk2-bar-2</td>
+            <td>3</td>
+            <td>0</td>
+        </tr>
+        <tr>
+            <td>mk2-bar-3</td>
+            <td>3</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <td>mk2-bar-4</td>
+            <td>3</td>
+            <td>0</td>
+        </tr>
+        <tr>
+            <td>mk2-bar-fruity</td>
+            <td>1</td>
+            <td>0</td>
+        </tr>
+        <tr>
+            <td>mk3-bar-1</td>
+            <td>3</td>
+            <td>0</td>
+        </tr>
+    </tbody>
+</table>
+        </center></li>
+    </ul>
 
 </div>
 
