--- a/dashboard.html
+++ b/dashboard.html
@@ -119,32 +119,68 @@
 
     <tbody>
         <tr>
-            <td>mk2-bar-1</td>
+            <td><button class="uk-button uk-button-text" type="button">mk2-bar-1</button>
+              <div uk-dropdown="mode: click">
+              <p>Categories: general/politics/entertainment/non-profit</p>
+              <p class="uk-text-meta">The MK2 series of ad system was released in early 2020.</p>
+
+              </div>
+            </td>
             <td>3</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>mk2-bar-2</td>
+        <td><button class="uk-button uk-button-text" type="button">mk2-bar-2</button>
+          <div uk-dropdown="mode: click">
+          <p>Categories: general/entertainment/media</p>
+          <p class="uk-text-meta">The MK2 series of ad system was released in early 2020.</p>
+
+          </div>
+        </td>
             <td>3</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>mk2-bar-3</td>
+        <td><button class="uk-button uk-button-text" type="button">mk2-bar-3</button>
+          <div uk-dropdown="mode: click">
+          <p>Categories: general/media/technology</p>
+          <p class="uk-text-meta">The MK2 series of ad system was released in early 2020.</p>
+
+          </div>
+        </td>
             <td>3</td>
             <td>5</td>
         </tr>
         <tr>
-            <td>mk2-bar-4</td>
+        <td><button class="uk-button uk-button-text" type="button">mk2-bar-4</button>
+          <div uk-dropdown="mode: click">
+          <p>Categories: general/politics/technology</p>
+          <p class="uk-text-meta">The MK2 series of ad system was released in early 2020.</p>
+
+          </div>
+        </td>
             <td>3</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>mk2-bar-fruity</td>
+        <td><button class="uk-button uk-button-text" type="button">mk2-bar-fruity</button>
+          <div uk-dropdown="mode: click">
+          <p>Categories: general/entertainment/media</p>
+          <p class="uk-text-meta">The MK2 series of ad system was released in early 2020.</p>
+
+          </div>
+        </td>
             <td>1</td>
             <td>0</td>
         </tr>
         <tr>
-            <td>mk3-bar-1</td>
+        <td><button class="uk-button uk-button-text" type="button">mk3-bar-1</button>
+          <div uk-dropdown="mode: click">
+          <p>Categories: general/entertainment/education</p>
+          <p class="uk-text-meta">The MK2 series of ad system was released in the summer of 2020.</p>
+
+          </div>
+        </td>
             <td>3</td>
             <td>0</td>
         </tr>
