--- a/card/index.html
+++ b/card/index.html
@@ -23,28 +23,28 @@
 </head>
 <header>
   <div class="uk-inline" style="position: fixed; top: 0px; left: 0px;">
-      <a href="./index.html"><button class="uk-button uk-button-secondary" type="button">Home</button></a>
+      <a href="https://www.borgcreative.com/"><button class="uk-button uk-button-secondary" type="button">Home</button></a>
 
       <button class="uk-button uk-button-secondary" type="button" >Menu</button>
       <div uk-dropdown="mode: click">
         <p><a href=""><button class="uk-button uk-button-text">Digital Products</button></a></p>
         <div uk-dropdown="mode: click">
-          <p><a href="./page12.html" ><button class="uk-button uk-button-text">BCS Marketing</button></a></p>
-          <p><a href="./bcs-card.html" ><button class="uk-button uk-button-text">BCS Card</button></a></p>
-          <p><a href="./fruity.html" ><button class="uk-button uk-button-text">Fruity</button></a></p>
+          <p><a href="https://www.borgcreative.com/page12.html" ><button class="uk-button uk-button-text">BCS Marketing</button></a></p>
+          <p><a href="https://www.borgcreative.com/bcs-card.html" ><button class="uk-button uk-button-text">BCS Card</button></a></p>
+          <p><a href="https://www.borgcreative.com/fruity.html" ><button class="uk-button uk-button-text">Fruity</button></a></p>
           <p><a href="https://gamejolt.com/games/grocerycatcher/523501" target="_blank"><button class="uk-button uk-button-text">Grocery Catcher</button></a></p>
           <p><a href="https://search.borgcreative.com/" target="_blank"><button class="uk-button uk-button-text">Search (Beta)</button></a></p>
         </div>
         <p><a href=""><button class="uk-button uk-button-text">Media</button></a></p>
         <div uk-dropdown="mode: click">
-          <p><a href="./animation.html" ><button class="uk-button uk-button-text">Animation</button></a></p>
-          <p><a href="./video.html" ><button class="uk-button uk-button-text">Video</button></a></p>
-          <p><a href="./interactive.html" ><button class="uk-button uk-button-text">Interactive</button></a></p>
+          <p><a href="https://www.borgcreative.com/animation.html" ><button class="uk-button uk-button-text">Animation</button></a></p>
+          <p><a href="https://www.borgcreative.com/video.html" ><button class="uk-button uk-button-text">Video</button></a></p>
+          <p><a href="https://www.borgcreative.com/interactive.html" ><button class="uk-button uk-button-text">Interactive</button></a></p>
         </div>
-        <p><a href="./welcome.html" ><button class="uk-button uk-button-text">Interactive Guide</button></a></p>
+        <p><a href="https://www.borgcreative.com/welcome.html" ><button class="uk-button uk-button-text">Interactive Guide</button></a></p>
 
         <p><a href="https://teespring.com/stores/borgcreative" target="_blank"><button class="uk-button uk-button-text">Shop</button></a></p>
-        <p><a href="./privacy.html" ><button class="uk-button uk-button-text">Privacy</button></a></p>
+        <p><a href="https://www.borgcreative.com/privacy.html" ><button class="uk-button uk-button-text">Privacy</button></a></p>
         <p><a href="https://www.facebook.com/borgcreativestudios/" target="_blank"> <img src="./img/facebook.svg" width="40px" alt=""> </a><a href="https://www.instagram.com/borgcreativestudios/" target="_blank"> <img src="./img/instagram.svg" width="40px" alt=""> </a><a href="https://twitter.com/borgcreative" target="_blank"> <img src="./img/twitter.svg" width="40px" alt=""> </a></p>
 
 
@@ -122,20 +122,20 @@
   <footer>
 
 
-    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('img/bcs-cover.jpg');">
+    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('https://www.borgcreative.com/img/bcs-cover.jpg');">
 
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
           <table class="uk-table" >
       <tbody style="border: none;">
           <tr style="background-color: #3d566e; border: none; color: #fff;">
-  <td><a href="./privacy.html" >Privacy</a></td>
-  <td><a href="./jobs.html" >Jobs</a></td>
-  <td><a href="./about.html" >About Us</a></td>
+  <td><a href="https://www.borgcreative.com/privacy.html" >Privacy</a></td>
+  <td><a href="https://www.borgcreative.com/jobs.html" >Jobs</a></td>
+  <td><a href="https://www.borgcreative.com/about.html" >About Us</a></td>
 
           </tr>
           <tr style="background-color: #3d566e; border: none; color: #fff;">
   <td><a href="https://data.borgcreative.com/" target="_blank" >Data</a></td>
-  <td><a href="./accountterms.html" >Terms</a></td>
+  <td><a href="https://www.borgcreative.com/accountterms.html" >Terms</a></td>
   <td><a href="https://borgcreative.freshdesk.com/support/home"target="_blank">Support</a></td>
           </tr>
       </tbody>
