--- a/chartb.html
+++ b/chartb.html
@@ -14,20 +14,20 @@
       datasets: [
           {
               name: "Social Accounts", chartType: 'bar',
-              values: [550,0,550]
+              values: [1079,0, 1079]
           },
           {
               name: "JBP", chartType: 'bar',
-              values: [397,0,397]          },
+              values: [646,0,646]          },
           {
               name: "GTT", chartType: 'bar',
-              values: [27,0,0]          },
+              values: [27,2,29]          },
           {
               name: "Render Blog", chartType: 'bar',
-              values: [0,0,0]          },
+              values: [1,0,1]          },
           {
               name: "CWJ", chartType: 'bar',
-              values: [243,0,243]          },
+              values: [362,0,362]          },
           {
               name: "Author", chartType: 'bar',
               values: [0,15,15]          },
